# FedScale

./: .gitignore  environment1.yml  pyproject.toml  slurm-google_speech-1+3-scale1000.sh  slurm-google_speech-1+3-scale2000.sh  slurm-google_speech-1+3.sh  slurm-google_speech-1gpu.sh  slurm-openimage-1+3-scale1000.sh  slurm-openimage-1+3-scale10000.sh  slurm-openimage-1+3.sh  slurm-openimage-1gpu-scale.sh  slurm-openimage-1gpu.sh  slurm-reddit-1+3-scale1000.sh  slurm-reddit-1+3.sh  slurm-reddit-1gpu-scale.sh  slurm-reddit-1gpu.sh  slurm-shakespeare-1+3-scale1000.sh  slurm-shakespeare-1+3-scale10000.sh  slurm-shakespeare-1+3.sh  slurm-shakespeare-1gpu.sh  slurm_fedscale_scale.sh  slurm_openimage_fedscale.sh  slurm_shakespeare_fedscale_1gpu.sh  slurm_shakespeare_fedscale_2gpu.sh  slurm_shakespeare_fedscale_4gpu.sh  unslurm.sh
benchmark/configs/openimage/: openimage-mauao-1gpu.yml  openimage-multi-1+3-scale1000.yml  openimage-multi-1+3-scale10000.yml  openimage-multi-1+3.yml  openimage_1n_mwpg.yml  openimage_2n_1gpupernode.yml  openimage_2n_2gpupernode.yml  openimage_2n_4gpupernode.yml  openimage_mauao_15w.yml  openimage_mauao_16w.yml  openimage_mauao_1gpu.yml  openimage_mauao_30w.yml  openimage_mauao_60w.yml  openimage_mauao_scale1000.yml  openimage_mauao_scale200.yml  openimage_mauao_scale400.yml  openimage_mauao_scale650.yml  openimage_multi_1+3.yml  openimage_ngongotaha_16w.yml  openimage_ngongotaha_4w.yml  openimage_ngongotaha_8w.yml  openimage_tarawera_1gpu.yml  openimage_tarawera_2gpu.yml
benchmark/configs/reddit/: reddit-mauao-1gpu.yml  reddit-multi-1+3-scale1000.yml  reddit-multi-1+3.yml
benchmark/configs/shakespeare/: shakespeare-mauao-1gpu.yml  shakespeare-multi-1+3-scale1000.yml  shakespeare-multi-1+3-scale10000.yml  shakespeare-multi-1+3.yml  shakespeare_2n_1g.yml  shakespeare_mauao_1gpu.yml  shakespeare_mauao_2gpu.yml  shakespeare_mauao_4_4w.yml  shakespeare_mauao_4gpu.yml  shakespeare_mauao_8w.yml  shakespeare_multi_1+3.yml  shakespeare_ngongotaha_2_2_2_2w.yml  shakespeare_ngongotaha_4_4w.yml  shakespeare_ngongotaha_8w.yml  shakespeare_test.yml
benchmark/configs/speech/: google_speech-mauao-1gpu.yml  google_speech-multi-1+3-scale1000.yml  google_speech-multi-1+3-scale2000.yml  google_speech-multi-1+3.yml
docker/: driver.py  driver_slurm_multinode.py  shutdown.py
examples/notebook/: fedscale_demo_server.ipynb
fedscale/cloud/: client_manager.py  fllibs.py
fedscale/cloud/aggregation/: aggregator.py
fedscale/cloud/channels/: channel_context.py
fedscale/cloud/execution/: data_processor.py  executor.py  torch_client.py
fedscale/core/: fllibs.py
fedscale/core/aggregation/: aggregator.py
fedscale/core/channels/: channel_context.py
fedscale/core/execution/: client.py  data_processor.py  executor.py
fedscale/dataloaders/: divide_data.py  nlp.py  shakespeare.py  speech.py  transforms_stft.py  transforms_wav.py
fedscale/utils/models/simple/: models.py
